// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation Component renders correctly in large screens and matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-126ni31"
  >
    <div
      data-testid="page-renderer"
    >
      Page Index: 
      0
    </div>
  </div>
</div>
`;

exports[`Documentation Component renders correctly in small screens and matches snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-s92abg"
  >
    <div
      data-testid="page-renderer"
    >
      Page Index: 
      0
    </div>
  </div>
</div>
`;
